test/typechecker.d/valid/main1.surc
main(stdout: OutputStream) = do
	var x <- 4
	write stdout , "whoa"
