test/typechecker.d/invalid/tiny.surc
main(stdout: OutputStream) = do
	s = (5+'a') & str
	write stdout , s
